# ResearchTemplate

./: .copier-answers.yml.jinja  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  README.md.jinja  actions-runner-job.sh  cluster_test.py  conda_install.sh  conftest.py  copier.yaml  environment.yaml  extra.css  generate_reference_docs.py  index.html  macros.py  main.py  main_test.py  mkdocs.yml  objects.inv  poetry.toml  profiling_test.py  pyproject.toml  pyproject.toml.jinja  requirements.txt  search.html  setup.py  sitemap.xml  versioneer.py
.devcontainer/: devcontainer.json
.github/: actions-runner-job.sh  build.yml  launch_actions_runner.sh  launch_actions_runner.sh.jinja  local_actions_runner.sh  local_actions_runner.sh.jinja
.github/workflows/: build.yml  build.yml.jinja  cruft-update.yml  docs.yml  template-sync.yml
.regression_files/project/main_test/: test_help_string.txt
SUMMARY/: index.html
contributing/: index.html
docs/: .gitignore  SUMMARY.md  contributing.md  docs_test.py  examples.md  extra.css  generate_reference_docs.py  help.md  index.md  install.md  intro.md  macros.py  presentation.md  profiling_test.py  related.md  resources.md  tests.md
docs/examples/: examples.md  image_classification.md  index.md  jax.md  jax_image_classification.md  jax_rl_example.md  jax_sl_example.md  llm_finetuning.md  nlp.md  profiling.ipynb  profiling.md  supervised_learning.md  sweeps.md  text_classification.md
docs/features/: auto_schema.md  devcontainer.md  index.md  jax.md  remote_slurm_launcher.md  testing.md
docs/getting_started/: install.md  intro.md
docs/overview/: intro.md
examples/: index.html
examples/SUMMARY/: index.html
examples/examples/: index.html
examples/image_classification/: index.html
examples/jax/: index.html
examples/jax_image_classification/: index.html
examples/jax_rl/: index.html
examples/jax_rl_example/: index.html
examples/llm_finetuning/: index.html
examples/profiling/: index.html
examples/sweeps/: index.html
examples/text_classification/: index.html
features/: index.html
features/auto_schema/: index.html
features/devcontainer/: index.html
features/jax/: index.html
features/remote_slurm_launcher/: index.html
features/testing/: index.html
getting_started/install/: index.html
help/: index.html
hydra_plugins/custom_launcher/: _custom_orion_sweeper.py  custom_launcher.py  custom_orion_sweeper.py
hydra_plugins/job_dependency_launcher/: __init__.py  config.py  launcher.py
hydra_plugins/remote_slurm_launcher/: __init__.py  _remote_launcher_plugin.py
install/: index.html
intro/: index.html
overview/intro/: index.html
project/: __init__.py  cluster_test.py  conftest.py  experiment.py  launch.py  launch_xm.py  main.py  main_test.py
project/algorithms/: __init__.py  algorithm.py  algorithm_test.py  algorithm_tests.py  backprop.py  backprop_test.py  classification_tests.py  example.py  example_algo.py  example_algo_test.py  example_test.py  glue_transformer.py  hf_example.py  hf_example_test.py  image_classification.py  image_classification_test.py  image_classifier.py  image_classifier_test.py  jax_algo.py  jax_algo_test.py  jax_example.py  jax_example_test.py  jax_image_classification_test.py  jax_image_classifier.py  jax_image_classifier_test.py  jax_ppo.py  jax_ppo_test.py  jax_rl_example.py  jax_rl_example_test.py  jax_trainer.py  lightning_module_tests.py  llm_finetuning.py  llm_finetuning_example.py  llm_finetuning_example_test.py  llm_finetuning_test.py  manual_optimization_example.py  manual_optimization_example_test.py  no_op.py  rl_example.py  text_classification_example.py  (+4 more)
project/algorithms/bases/: __init__.py  algorithm.py  algorithm_test.py  image_classification.py  image_classification_test.py
project/algorithms/callbacks/: __init__.py  callback.py  classification_metrics.py  samples_per_second.py
project/algorithms/common/: callback.py  graph_utils.py  hooks.py  layers.py
project/algorithms/example_test/: test_initialization_is_reproducible.yaml
project/algorithms/networks/: fcnet.py
project/algorithms/ppo/: dataloader_wrapper.py  ppo.py  ppo_brax.py  ppo_cleanrl.py  ppo_test.py  utils.py
project/algorithms/rl_example/: __init__.py  dataset.py  reinforce.py  reinforce_test.py  rl_datamodule.py  types.py  utils.py
project/algorithms/testsuites/: __init__.py  algo_test.py  algorithm.py  algorithm_tests.py  classification_tests.py  datamodule_tests.py  lightning_module_tests.py
project/configs/: __init__.py  config.py  config.yaml  config_test.py
project/configs/algorithm/: __init__.py  backprop.yaml  example.yaml  example_from_config.yaml  hf_example.yaml  image_classifier.yaml  jax_example.yaml  (+9 more)
project/datamodules/: __init__.py  cifar10.py  cifar10_datamodule.py  datamodule.py  datamodule_tests.py  datamodules_test.py  dataset_normalizations.py  fashion_mnist.py  fashion_mnist_datamodule.py  image_classification.py  imagenet32.py  imagenet32_test.py  inaturalist.py  inaturalist_test.py  mnist.py  moving_mnist.py  moving_mnist_test.py  text.py  transforms.py  vision.py  vision_datamodule.py  vision_test.py
project/datasets/: datamodules_test.py  datasets_test.py  vision.py
project/networks/: __init__.py  fcnet.py
project/trainers/: __init__.py  jax_trainer.py
project/utils/: __init__.py  _remote_launcher_plugin.py  auto_schema.py  auto_schema_test.py  autoref_plugin.py  autoref_plugin_test.py  device.py  env_vars.py  hydra_config_utils.py  hydra_utils.py  maxpool_utils.py  packing_launcher_plugin.py  packing_launcher_plugin_test.py  remote_launcher_plugin.py  remote_launcher_plugin_test.py  remote_launcher_test.py  seeding.py  tensor_regression.py  testutils.py  types.py  utils.py
reference/: index.html
reference/SUMMARY/: index.html
reference/project/: index.html
related/: index.html
resources/: index.html
scripts/: mila_setup.sh  setup_docker.bash
search/: search_index.json
tests/: benchmarking_test.py  conftest.py  index.html  test_launch_experiments.py  test_template.py
tests/.regression_files/: .gitignore
(+591 files in other folders)
