[project]
name = "research_project_template"
version = "0.0.1"
description = "Research Project Template"
authors = [
    {name = "Fabrice Normandin", email = "normandf@mila.quebec"},
    {name = "César Miguel Valdez Córdova", email = "cesar.valdez@mila.quebec"}
]
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "hydra-core>=1.3.2",
    "rich>=13.7.1",
    "tqdm>=4.66.2",
    "hydra-zen>=0.12.1",
    "lightning>=2.3.0",
    "gdown>=5.1.0",
    "hydra-submitit-launcher>=1.2.0",
    "wandb>=0.16.4",
    "hydra-colorlog>=1.2.0",
    "matplotlib>=3.8.3",
    "pygame>=2.6.0",
    "tensorboard>=2.16.2",
    "torch-jax-interop>=0.0.7",
    "simple-parsing>=0.1.5",
    "pydantic>=2.8.2",
    "milatools>=0.0.18",
    "jax>=0.4.31",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
project = "project:main.main"

[project.optional-dependencies]
gpu = [
    "jax[cuda12]",
]
docs = [
    "mkdocstrings>=0.25.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.31",
    "black>=24.8.0",
]

[tool.setuptools]
packages = ["project"]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-timeout>=2.3.1",
    "pytest-regressions>=2.5.0",
    "pytest-skip-slow>=0.0.5",
    "pytest-env>=1.1.3",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.3",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "tensor-regression>=0.0.6",
    "pytest-testmon>=2.1.1",
    "mkdocs>=1.6.0",
    "pymdown-extensions>=10.8.1",
    "pre-commit>=3.7.1",
    "mktestdocs>=0.2.2",
]


# todo: doesn't seem to be required anymore?
# [[tool.pdm.source]]
# name = "jax"
# url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
# verify_ssl = true
# type = "find_links"


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["project", "docs"]
# todo: look into using https://github.com/scientific-python/pytest-doctestplus
addopts = ["--doctest-modules", "--stats-rounding-precision=3"]
markers = [
    "incremental: incremental testing support",
    "parametrize_when_used: Parametrize a test only when the argument is used."
]

[tool.ruff]
line-length = 99
indent-width = 4
# Add the pyupgrade and isort options in addition to the defaults.
lint.select = ["E4", "E7", "E9", "F", "I", "UP"]
